--- a/products/index.html
+++ b/products/index.html
@@ -4,11 +4,12 @@
 <head>
     <meta charset="UTF-8">
 
-    <link rel="icon" type="image/png" href="../favicon/favicon-96x96.png" sizes="96x96" />
-    <link rel="icon" type="image/svg+xml" href="../favicon/favicon.svg" />
-    <link rel="shortcut icon" href="../favicon/favicon.ico" />
-    <link rel="apple-touch-icon" sizes="180x180" href="../favicon/apple-touch-icon.png" />
-    <link rel="manifest" href="../favicon/site.webmanifest" />
+    <link rel="icon" type="image/png" href="../favicon/favicon-v2.png" sizes="96x96" />
+<link rel="icon" type="image/svg+xml" href="../favicon/favicon-v2.svg" />
+<link rel="shortcut icon" href="../favicon/favicon-v2.ico" />
+<link rel="apple-touch-icon" sizes="180x180" href="../favicon/apple-touch-icon-v2.png" />
+<link rel="manifest" href="../favicon/site-v2.webmanifest" />
+
 
 
     <link href='https://cdn.boxicons.com/fonts/basic/boxicons.min.css' rel='stylesheet'>
