--- a/aboutus/index.html
+++ b/aboutus/index.html
@@ -861,7 +861,7 @@
     </section>
 
     <!-- Team Section -->
-    <section class="team-section">
+    <!-- <section class="team-section">
         <div class="team-header">
             <h2>Meet Our Leadership Team</h2>
             <p>The experts driving innovation and success</p>
@@ -887,7 +887,7 @@
             </div>
 
         </div>
-    </section>
+    </section> -->
 
     <!-- CTA Section -->
     <section class="cta-section">
