Favicon changed.. nows

--- a/index.html
+++ b/index.html
@@ -68,6 +68,11 @@
                 </ul>
             </div>
 
+            <!-- <div class="translation">
+                
+                 <img src="assets/images/somalia.png" alt="">
+            </div> -->
+
             <button class="Login">Login</button>
 
             <div class="menu">
@@ -711,6 +716,7 @@
 
 
 
+<script src="app.js"></script>
 </body>
 
 </html>
