--- a/pricing/index.html
+++ b/pricing/index.html
@@ -101,7 +101,7 @@
         }
 
         .pricing-card.featured {
-            border: 3px solid #4f46e5;
+            border: 3px solid #1C2582;
             transform: scale(1.05);
         }
 
@@ -178,12 +178,12 @@
         }
 
         .cta-button.primary {
-            background: #4f46e5;
+            background: #1C2582;
             color: white;
         }
 
         .cta-button.primary:hover {
-            background: #4338ca;
+            background: #1C2582;
             transform: scale(1.02);
         }
 
@@ -212,7 +212,7 @@
         }
 
         .additional-link a:hover {
-            color: #4338ca;
+            color: #1C2582;
         }
 
         .divider {
@@ -900,14 +900,15 @@
 
             <div class="highlights-title">Highlights</div>
             <ul class="features-list">
-                <li>Up to 50 products</li>
-                <li>1 user account</li>
+                <li>Up to 30 products</li>
+                <li>1 Staff account</li>
                 <li>Basic sales tracking</li>
                 <li>Simple inventory management</li>
                 <li>Receipt printer support</li>
                 <li>Email support</li>
                 <li>Mobile app access (iOS & Android)</li>
                 <li>Basic reports & analytics</li>
+                <li>Ads</li>
             </ul>
         </div>
 
@@ -919,10 +920,10 @@
 
             <div class="price">
                 <span class="currency">$</span>
-                <span class="amount">49</span>
+                <span class="amount">4.99</span>
             </div>
             <div class="period">Per month</div>
-            <div class="billing-info">Billed annually at $499, or $69/month</div>
+            <div class="billing-info">Billed annually at $59.88, or $4.99/month</div>
 
             <button class="cta-button primary">Start Pro Trial</button>
             <div class="additional-link">
@@ -933,15 +934,14 @@
 
             <div class="highlights-title">Highlights</div>
             <ul class="features-list">
-                <li>Everything in Free</li>
-                <li>Unlimited products & categories</li>
-                <li>Up to 5 user accounts</li>
-                <li>Advanced inventory management</li>
-                <li>Multiple payment methods (Cards, UPI, Wallets)</li>
-                <li>Customer loyalty program</li>
-                <li>Barcode scanner integration</li>
                 <li>Advanced reports & analytics</li>
+                <li>Unlimited products & categories</li>
+                <li>Up to 5 staff accounts</li>
+                <li>No Ads</li>
+                <li>Raad Credit</li>
+                <li>Customise Product</li>
                 <li>Tax management & GST billing</li>
+                <li>Advance Order Details</li>
                 <li>Cloud backup & sync</li>
                 <li>Priority email & chat support</li>
                 <li>Custom receipt branding</li>
