Great upload for image

--- a/index.html
+++ b/index.html
@@ -5,39 +5,92 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-
+    <!-- Favicon Links -->
     <link rel="icon" type="image/png" href="favicon/favicon-v2.png" sizes="96x96" />
-<link rel="icon" type="image/svg+xml" href="favicon/favicon-v2.svg" />
-<link rel="shortcut icon" href="favicon/favicon-v2.ico" />
-<link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon-v2.png" />
-<link rel="manifest" href="favicon/site-v2.webmanifest" />
+    <link rel="icon" type="image/svg+xml" href="favicon/favicon-v2.svg" />
+    <link rel="shortcut icon" href="favicon/favicon-v2.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon-v2.png" />
+    <link rel="manifest" href="favicon/site-v2.webmanifest" />
 
-
-
-
+    <!-- Primary Meta Tags -->
+    <title>Raad POS App – Smart Point of Sale for Somali Businesses</title>
+    <meta name="title" content="Raad POS App – Smart Point of Sale for Somali Businesses">
     <meta name="description"
         content="Raad is a Somali POS app that helps small businesses manage sales, inventory, and customer credit all from a smartphone.">
     <meta name="keywords"
         content="POS app Somalia, Raad POS, mobile point of sale, inventory management, dayn app, business management software">
-    <meta property="og:title" content="Raad POS App – Smart Point of Sale for Somali Businesses">
-    <meta property="og:description"
-        content="Sell, manage, and grow your business with Raad POS App. Track sales, inventory, and credit easily.">
-    <meta property="og:image" content="https://raadapp.com/assets/images/theraad.png">
-    <meta property="og:url" content="https://raadapp.com">
-    <meta name="twitter:card" content="summary_large_image">
-
     <meta name="author" content="Raad POS App Team">
     <meta name="publisher" content="Raad">
     <meta name="application-name" content="Raad POS App">
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
 
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://raadapp.com">
+    <meta property="og:title" content="Raad POS App – Smart Point of Sale for Somali Businesses">
+    <meta property="og:description"
+        content="Sell, manage, and grow your business with Raad POS App. Track sales, inventory, and credit easily.">
+    <meta property="og:image" content="https://raadapp.com/assets/images/theraad.png">
+    <meta property="og:site_name" content="Raad POS App">
 
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:url" content="https://raadapp.com">
+    <meta name="twitter:title" content="Raad POS App – Smart Point of Sale for Somali Businesses">
+    <meta name="twitter:description"
+        content="Sell, manage, and grow your business with Raad POS App. Track sales, inventory, and credit easily.">
+    <meta name="twitter:image" content="https://raadapp.com/assets/images/theraad.png">
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://raadapp.com">
+
+    <!-- Structured Data (JSON-LD) -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "Raad POS App",
+      "alternateName": "Raad",
+      "url": "https://raadapp.com",
+      "logo": "https://raadapp.com/assets/images/theraad.png",
+      "description": "Raad is a Somali POS app that helps small businesses manage sales, inventory, and customer credit all from a smartphone.",
+      "contactPoint": {
+        "@type": "ContactPoint",
+        "email": "support@raadapp.com",
+        "contactType": "Customer Support",
+        "availableLanguage": ["en", "so"]
+      },
+      "sameAs": []
+    }
+    </script>
+
+    <!-- Additional Structured Data for Software Application -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "SoftwareApplication",
+      "name": "Raad POS App",
+      "operatingSystem": "Android, iOS",
+      "applicationCategory": "BusinessApplication",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "USD"
+      },
+      "description": "Raad is a Somali POS app that helps small businesses manage sales, inventory, and customer credit all from a smartphone.",
+      "screenshot": "https://raadapp.com/assets/images/home.png"
+    }
+    </script>
+
+    <!-- Stylesheets -->
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="mobileScreen.css">
     <link href='https://cdn.boxicons.com/fonts/basic/boxicons.min.css' rel='stylesheet'>
     <link href='https://cdn.boxicons.com/fonts/brands/boxicons-brands.min.css' rel='stylesheet'>
-    <title>Raad POS App – Smart Point of Sale for Somali Businesses</title>
 </head>
+
+<!-- Add this in your <head> section -->
+
 
 <body>
 
