--- a/Contact/index.html
+++ b/Contact/index.html
@@ -736,7 +736,7 @@
                         <label>Subject *</label>
                         <select required>
                             <option value="">Select a topic</option>
-                            <option value="sales">Sales Inquiry</option>
+                            <option value="sales">Account Deletion</option>
                             <option value="support">Technical Support</option>
                             <option value="billing">Billing Question</option>
                             <option value="demo">Request a Demo</option>
