--- a/aboutus/index.html
+++ b/aboutus/index.html
@@ -719,7 +719,7 @@
                 <a href="#">
                     <li style="font-weight: 600;">About Us</li>
                 </a>
-                <a href="../contactus/">
+                <a href="Contact/">
                     <li>Contact Us</li>
                 </a>
             </ul>
