--- a/products/index.html
+++ b/products/index.html
@@ -566,7 +566,7 @@
                 <a href="../aboutus/">
                     <li>About Us</li>
                 </a>
-                <a href="../contactus/">
+                <a href="Contact/">
                     <li>Contact Us</li>
                 </a>
             </ul>
