--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     <a href="aboutus/">
                         <li>About Us</li>
                     </a>
-                    <a href="contactus/">
+                    <a href="Contact/">
                         <li>Contact Us</li>
                     </a>
                 </ul>
