--- a/pricing/index.html
+++ b/pricing/index.html
@@ -866,7 +866,7 @@
                 <a href="../aboutus/">
                     <li>About Us</li>
                 </a>
-                <a href="../contactus/">
+                <a href="Contact/">
                     <li>Contact Us</li>
                 </a>
             </ul>
