--- a/index.html
+++ b/index.html
@@ -169,6 +169,9 @@
             <p>Tired of manual books, scattered inventory, and complex sales? Raad brings your entire business into one
                 app, replacing multiple tools for seamless POS, stock, and credit management, all designed for growth
             </p>
+            <div class="playstore" onclick="window.open('https://play.google.com/store/apps/details?id=com.raadapp.raad')">
+                <img src="assets/images/playstore.png" alt="">
+            </div>
         </div>
 
         <div class="screen-shots">
@@ -192,7 +195,7 @@
 
     <div class="center">
         <div class="center-text">
-            <h1>From Notebooks <br> to Next-Gen.</h1>
+            <h1 class="notebook">From Notebooks <br> to Next-Gen.</h1>
         </div>
         <div class="center-small-text">
             <p>Upgrade from paper notebooks to a next-gen business tool. Raad digitizes your sales, inventory, and
