--- a/index.html
+++ b/index.html
@@ -145,7 +145,14 @@
         </div>
 
 
-        <div class="right-wing"></div>
+        <div class="right-wing">
+            <div class="png-circle">
+                <img src="assets/images/newprint.png" alt="">
+            </div>
+            <div class="wing-text">
+                <h4>Empower your <span>business with the lightning speed of</span> Raad POS.</h4>
+            </div>
+        </div>
 
         <div class="start-buttom"></div>
 
@@ -162,6 +169,10 @@
             <div class="end-line">
                 <div class="end-point"></div>
             </div>
+        </div>
+
+        <div class="left-wing-cont">
+            <img src="assets/images/newtrend.jpg" alt="">
         </div>
 
         
