--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
                         <div class="old-desc">
                             <div class="old-head">
                                 <h4 data-translate="new_way">New Way</h4>
-                                <p data-translate="new_way_desc">Selling used to live in notebooks. Today.</p>
+                                <p data-translate="new_way_desc">Manage, sell, and scale - all in a single AI-powered platform.</p>
                             </div>
                         </div>
                     </div>
@@ -611,10 +611,10 @@
             <div class="footer-section">
                 <h3 data-translate="footer_explore">Explore</h3>
                 <ul>
-                    <li><a href="#" data-translate="footer_about">About Us</a></li>
+                    <li><a href="http://127.0.0.1:5501/aboutus/" data-translate="footer_about">About Us</a></li>
                     <li><a href="#" data-translate="footer_mission">Our Mission</a></li>
-                    <li><a href="#" data-translate="footer_how">How It Work</a></li>
-                    <li><a href="#" data-translate="footer_policy">Policy</a></li>
+                    <!-- <li><a href="#" data-translate="footer_how">How It Work</a></li> -->
+                    <li><a href="http://127.0.0.1:5501/privacy/" data-translate="footer_policy">Policy</a></li>
                 </ul>
             </div>
 
@@ -657,7 +657,7 @@
                     </svg>
                 </a>
             </div>
-            <p class="copyright" data-translate="footer_copyright">© 2026 Raad - Pos Sales Tracker. All Rights Reserved.</p>
+            <p class="copyright" data-translate="footer_copyright">© 2026 Raad - RAAD HQ. All Rights Reserved.</p>
         </div>
     </div>
 
