--- a/DemoVedio/index.html
+++ b/DemoVedio/index.html
@@ -797,7 +797,7 @@
             <div class="video-player-wrapper">
                 <div class="video-loading" id="videoLoading"></div>
                 <video class="video-player" id="mainVideo" poster="../assets/images/Promosss.png">
-                    <source src="../assets/vedio/demovedio.mov" type="video/mp4">
+                    <source src="../assets/vedio/demovedio.mp4" type="video/mp4">
                     Your browser does not support the video tag.
                 </video>
                 
