--- a/DemoVedio/index.html
+++ b/DemoVedio/index.html
@@ -5,6 +5,8 @@
     <link rel="icon" type="image/png" href="../favicon/favicon-v2.png" sizes="96x96" />
     <link href='https://cdn.boxicons.com/2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href='https://cdn.boxicons.com/fonts/basic/boxicons.min.css' rel='stylesheet'>
+    <link href='https://cdn.boxicons.com/fonts/brands/boxicons-brands.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="../style.css">
     <title>Watch a Video | Raad</title>
     <style>
@@ -679,7 +681,7 @@
         <div class="the-navs">
             <ul>
                 <a href="../">
-                    <li class="home-link" data-translate="nav_home">Home</li>
+                    <li  data-translate="nav_home">Home</li>
                 </a>
                 <a href="products/">
                     <li data-translate="nav_products">Products</li>
