--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
                 </div>
                 <div class="buttons">
                     <button class="download" onclick="window.location.href='https://play.google.com/store/apps/details?id=com.raadapp.raad'" data-translate="btn_download">Download App</button>
-                    <button class="watch" onclick="window.location.href='../DemoVedio/'" data-translate="btn_watch">Watch a video</button>
+                    <button class="watch" onclick="window.location.href='DemoVedio/'" data-translate="btn_watch">Watch a video</button>
                 </div>
             </div>
         </div>
